--- a/CilindrWPF/CilindrWPF.csproj
+++ b/CilindrWPF/CilindrWPF.csproj
@@ -6,7 +6,16 @@
     <UseWPF>true</UseWPF>
     <StartupObject>CilindrWPF.App</StartupObject>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <Version>1.23.02.03</Version>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="LiveCharts.Wpf.Core" Version="0.9.8" />
@@ -18,6 +27,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathLib_Cilindr\MathLib_Cilindr\MathLib_Cilindr.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="icon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
